# AppleTracker

./: README.md  init.sql  pyproject.toml
apple-tracker/: pyproject.toml
src/: main.py
src/scrapping/software/: ios.py
