[tool.poetry]
name = "apple-tracker"
version = "0.1.0"
description = ""
authors = ["Jack Stockley <34308937+jnstockley@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "apple_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.36.0"
selectolax = "^0.3.16"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
