[tool.poetry]
name = "apple-tracker"
version = "0.1.0"
description = ""
authors = ["Jack Stockley <34308937+jnstockley@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "apple_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
